<resources>
    <string name="app_name">AudioFY</string>
    <string name="image_content_description">Image Content Description</string>
    //Welcome Screen
    <string name="lets_rock">Let\'s Rock</string>
    <string name="create_an_account">Create an account or log in to keep using AudioFY</string>
    <string name="signInWithGoogle">Sign In With Google</string>
    <string name="accept_terms_and_condition">By signing in you give consent to AudioFy\'s Terms of Service and acknowledge that you have read and understood the Privacy Policy.</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newsToday">News Today</string>


</resources>