<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity"

    android:background="#5D58FF"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/rectangle_ss"

        app:layout_constraintVertical_bias="0.4"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_content_description"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/circle_ss"

        app:layout_constraintVertical_bias="0.7"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:transitionName="logo"

        android:contentDescription="@string/image_content_description"/>

    <ImageView

        android:id="@+id/imageView2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"

        android:background="@drawable/background40"

        android:contentDescription="@string/image_content_description"

        android:transitionName="logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"
        android:fontFamily="@font/playball"
        android:text="@string/welcome"
        android:textColor="@color/white"

        android:textSize="36sp"

        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2

        android:id="@+id/viewPagerImageSlider"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingStart="80dp"
        android:paddingEnd="80dp"

        android:animateLayoutChanges="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"

        app:layout_constraintVertical_bias="0"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/lets_rock"
        android:textAlignment="center"

        android:textColor="@color/white"
        android:textSize="36sp"

        android:fontFamily="sans-serif"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerImageSlider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"

        android:fontFamily="sans-serif"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/signinbuttonwithgoogle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/ic_google_logo"

        android:text="@string/signInWithGoogle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"

        android:fontFamily="sans-serif"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintBottom_toTopOf="@+id/textView"

        android:layout_marginTop="24dp"

        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"

        android:onClick="signInButton"

        />

    <TextView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/accept_terms_and_condition"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>